--- a/zombie_model.yaml
+++ b/zombie_model.yaml
@@ -1,8 +1,11 @@
 random.seed: 42
-stop.at: 50.0
-human.count: 8000
+stop.at: 50
+neuron.perc: 5
+microglia.perc: 4
+astrocyte.perc: 13
+levodopa.perc: 0
 zombie.count: 400
-world.width: 200
-world.height: 200
+world.width: 40
+world.height: 40
 run.number: 1
 counts_file: './output/agent_counts.csv'
