--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 -i https://pypi.org/simple
 llvmlite==0.42.0; python_version >= '3.9'
-mpi4py==3.1.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+mpi4py==3.1.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 numba==0.59.1; python_version >= '3.9'
 numpy==1.26.4; python_version >= '3.9'
+pandas==2.2.2; python_version >= '3.9'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytz==2024.1
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+tzdata==2024.1; python_version >= '2'
