--- a/config/parkinson_model.yaml
+++ b/config/parkinson_model.yaml
@@ -1,11 +1,13 @@
 random.seed: 42
-stop.at: 50
+stop.at: 1
 neuron.perc: 5
 microglia.perc: 4
 astrocyte.perc: 13
 levodopa.perc: 0
+tcells.perc: 25
 zombie.count: 400
 world.width: 40
 world.height: 40
 run.number: 1
-counts_file: './output/agent_counts.csv'
+brain_file: './output/brain_set.csv'
+periphery_file: './output/periphery_set.csv'
