--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 -i https://pypi.org/simple
 llvmlite==0.42.0; python_version >= '3.9'
+loguru==0.7.2; python_version >= '3.5'
 mpi4py==3.1.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 numba==0.59.1; python_version >= '3.9'
 numpy==1.26.4; python_version >= '3.9'
