Added full levodopa and carbidopa implementation

--- a/config/parkinson_model.yaml
+++ b/config/parkinson_model.yaml
@@ -7,7 +7,8 @@ levodopa.perc: 15
 tcells.perc: 10
 th2.perc: 4
 th1.perc: 1
-carbidopa.effectiveness: 0.6
+carbidopa.effectiveness: 0.8
+dopamine.effectiveness: 0.4
 zombie.count: 400
 world.width: 40
 world.height: 40
