--- a/config/parkinson_model.yaml
+++ b/config/parkinson_model.yaml
@@ -1,14 +1,14 @@
 random.seed: 42
-stop.at: 175
+stop.at: 151
 neuron.perc: 5
 microglia.perc: 4
 astrocyte.perc: 13
-levodopa.perc: 15
+levodopa.perc: 0
 tcells.perc: 10
 th2.perc: 4
 th1.perc: 1
-carbidopa.effectiveness: 0.8
-dopamine.effectiveness: 0.4
+carbidopa.effectiveness: 0
+dopamine.effectiveness: 0
 zombie.count: 400
 world.width: 40
 world.height: 40
@@ -18,3 +18,4 @@ periphery_file: './output/periphery_set.csv'
 neuron_status_file: './output/neuron_status.csv'
 microglia_status_file: './output/microglia_status.csv'
 astrocyte_status_file: './output/astrocyte_status.csv'
+counts_file: './output/neuron_counts.csv'
